[gd_scene load_steps=35 format=3 uid="uid://cd8tkx0y8ylm6"]

[ext_resource type="Texture2D" uid="uid://byjy6lrmb0l3e" path="res://assets/TinySwords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_1amri"]
[ext_resource type="Script" path="res://player/player.gd" id="1_vpvyh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5geya"]
atlas = ExtResource("1_1amri")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmodu"]
atlas = ExtResource("1_1amri")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mab5t"]
atlas = ExtResource("1_1amri")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv1uc"]
atlas = ExtResource("1_1amri")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve1qe"]
atlas = ExtResource("1_1amri")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5tdt"]
atlas = ExtResource("1_1amri")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_axdlq"]
atlas = ExtResource("1_1amri")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf2lf"]
atlas = ExtResource("1_1amri")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_idxit"]
atlas = ExtResource("1_1amri")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioyck"]
atlas = ExtResource("1_1amri")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpyis"]
atlas = ExtResource("1_1amri")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivt41"]
atlas = ExtResource("1_1amri")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iycdj"]
atlas = ExtResource("1_1amri")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuuou"]
atlas = ExtResource("1_1amri")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oco0e"]
atlas = ExtResource("1_1amri")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3yvm"]
atlas = ExtResource("1_1amri")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr0hu"]
atlas = ExtResource("1_1amri")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtgkm"]
atlas = ExtResource("1_1amri")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw4ly"]
atlas = ExtResource("1_1amri")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o21kc"]
atlas = ExtResource("1_1amri")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_22ti2"]
atlas = ExtResource("1_1amri")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_75lf0"]
atlas = ExtResource("1_1amri")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_10kud"]
atlas = ExtResource("1_1amri")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u4ki"]
atlas = ExtResource("1_1amri")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooha8"]
atlas = ExtResource("1_1amri")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy6jg"]
atlas = ExtResource("1_1amri")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o3m"]
atlas = ExtResource("1_1amri")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1lqo"]
atlas = ExtResource("1_1amri")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtuaa"]
atlas = ExtResource("1_1amri")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6xbj"]
atlas = ExtResource("1_1amri")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_aa8t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5geya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmodu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mab5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv1uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve1qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5tdt")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axdlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf2lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idxit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioyck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpyis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivt41")
}],
"loop": false,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iycdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuuou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oco0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3yvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr0hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtgkm")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw4ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o21kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22ti2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75lf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10kud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u4ki")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooha8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy6jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1lqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtuaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6xbj")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c1l4x"]
radius = 22.0
height = 72.0

[node name="player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_vpvyh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aa8t2")
animation = &"idle"

[node name="player_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c1l4x")

[node name="weapon_area" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 8
input_pickable = false
monitoring = false

[node name="weapon_collision" type="CollisionPolygon2D" parent="weapon_area"]
polygon = PackedVector2Array(0, 0, 100, 100, 100, -100)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="weapon_area" to="." method="on_weapon_area_body_entered"]
